# billiard-ai

./: .gitignore  CMakeLists.txt  README.md
ext/camera_sdk/: .gitignore  CMakeLists.txt
ext/camera_sdk/win/x64/: CMakeLists.txt
ext/camera_sdk/win/x64/Samples/: index.html
ext/camera_sdk/win/x64/Samples/CameraBridge/: CLProtocol.cpp  CLProtocol.h  CameraBridge.cpp  CameraBridge.vcxproj  GenCP.cpp  GenCP.h  PleoraCameraFile.cpp  PleoraCameraFile.h  ReadMe.txt
ext/camera_sdk/win/x64/Samples/ConfigurationReader/: ConfigurationReader.cpp  ConfigurationReader.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/ConnectionRecovery/: ConnectionRecovery.cpp  ConnectionRecovery.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/DeviceFinder/: DeviceFinder.cpp  DeviceFinder.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/DeviceSerialPort/: DeviceSerialPort.cpp  DeviceSerialPort.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/DirectShowDisplay/: DirectShowDisplay.cpp  DirectShowDisplay.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/GenICamParameters/: GenICamParameters.cpp  GenICamParameters.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/ImageProcessing/: ImageProcessing.cpp  ImageProcessing.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/MultiSource/: MultiSource.cpp  MultiSource.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/MulticastMaster/: MulticastMaster.cpp  MulticastMaster.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/MulticastSlave/: MulticastSlave.cpp  MulticastSlave.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/NetCommand/: AboutBox.cpp  AttributesPane.cpp  AttributesPane.h  BitmapButton.cpp  BitmapButton.h  ChildFrm.cpp  ChildFrm.h  ConnectionThread.cpp  ConnectionThread.h  ControlPane.cpp  ControlPane.h  DefaultComParamsDlg.cpp  DefaultComParamsDlg.h  MainFrm.cpp  MainFrm.h  Messages.h  NetCommand.cpp  NetCommand.h  NetCommand.rc  NetCommand.vcxproj  NetCommandDoc.cpp  NetCommandDoc.h  NetCommandView.cpp  NetCommandView.h  ProgressDlg.cpp  ProgressDlg.h  ProjectPane.cpp  ProjectPane.h  PropertiesWnd.cpp  PropertiesWnd.h  PvMessageBox.h  ReadMe.txt  Setup.cpp  Setup.h  SetupDlg.cpp  SetupDlg.h  SplashPage.cpp  SplashPage.h  Thread.cpp  Thread.h  (+5 more)
ext/camera_sdk/win/x64/Samples/PlcAndGevEvents/: PlcAndGevEvents.cpp  PlcAndGevEvents.h  PlcAndGevEvents.rc  PlcAndGevEvents.vcxproj  PlcAndGevEventsDlg.cpp  PlcAndGevEventsDlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
ext/camera_sdk/win/x64/Samples/PvPipelineSample/: PvPipelineSample.cpp  PvPipelineSample.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/PvStreamSample/: PvStreamSample.cpp  PvStreamSample.vcxproj  ReadMe.txt
ext/camera_sdk/win/x64/Samples/SerialBridge/: CameraLinkDLLBridge.cpp  CameraLinkDLLBridge.h  ReadMe.txt  SerialBridge.cpp  SerialBridge.vcxproj  SerialCOMPortBridge.cpp  SerialCOMPortBridge.h
ext/camera_sdk/win/x64/Samples/SimpleGUIApplication/: DisplayThread.cpp  DisplayThread.h  ReadMe.txt  SimpleGUIApplication.cpp  SimpleGUIApplication.h  SimpleGUIApplication.rc  SimpleGUIApplication.vcxproj  SimpleGUIApplicationDlg.cpp  SimpleGUIApplicationDlg.h  resource.h  stdafx.h
ext/camera_sdk/win/x64/Samples/TapReconstruction/: ReadMe.txt  TapReconstruction.cpp  TapReconstruction.vcxproj
ext/camera_sdk/win/x64/Samples/TransmitChunkData/: Configuration.h  DataGenerator.cpp  DataGenerator.h  ReadMe.txt  TransmitChunkData.cpp  TransmitChunkData.vcxproj
ext/camera_sdk/win/x64/lib/: EbInstallerLib64.lib  EbTransportLayerLib64.lib  EbUtilsLib64.lib  PtConvertersLib64.lib  PtUtilsLib64.lib  PvAppUtils64.lib  PvBase64.lib  PvBuffer64.lib  PvCameraBridge64.lib  PvDSSource64.lib  PvDevice64.lib  PvGUI64_VC10.lib  PvGUI64_VC11.lib  PvGUI64_VC12.lib  PvGUI64_VC14.lib  PvGenICam64.lib  PvPersistence64.lib  PvSerial64.lib  PvStream64.lib  PvSystem64.lib  PvTransmitter64.lib  PvVirtualDevice64.lib  SimpleImagingLib64.lib
ext/opencv/: CMakeLists.txt
lib/billiard_capture/: CMakeLists.txt
lib/billiard_capture/include/billiard_capture/: billiard_capture.hpp  macro_definition.hpp
lib/billiard_capture/src/: CMakeLists.txt  billiard_capture.cpp  camera.hpp  image_stream.cpp  image_stream.hpp
lib/billiard_detection/: CMakeLists.txt
lib/billiard_detection/include/billiard_detection/: billiard_detection.hpp  macro_definition.hpp  type.hpp
lib/billiard_detection/src/: CMakeLists.txt  billiard_detection.cpp  type.cpp
lib/billiard_physics/: CMakeLists.txt
lib/billiard_physics/include/billiard_physics/: billiard_physics.hpp  macro_definition.hpp
lib/billiard_physics/src/: CMakeLists.txt  billiard_physics.cpp
lib/billiard_search/: CMakeLists.txt
lib/billiard_search/include/billiard_search/: billiard_search.hpp  macro_definition.hpp  type.hpp
lib/billiard_search/src/: CMakeLists.txt  billiard_search.cpp  type.cpp
lib/unity_adapter/: CMakeLists.txt
lib/unity_adapter/include/unity_adapter/: macro_definition.hpp  type.hpp  unity_adapter.hpp
lib/unity_adapter/src/: CMakeLists.txt  event_queue.hpp  type.cpp  unity_adapter.cpp
test/billiard_detection/: CMakeLists.txt
test/billiard_detection/resources/video_detection/: testcases.json
test/billiard_detection/src/: CMakeLists.txt  aruco_markers.cpp  billiard_detection_test.cpp  billiard_detection_tryout.cpp  billiard_detection_tryout_old.cpp  config.hpp  dummy_test.cpp  error_estimation.cpp  hsv_range_filter.cpp  optical_flow.cpp  real_world_coordinates.cpp  reference_data.cpp  snooker_classification.cpp  tracking.cpp  util.cpp  util.hpp  video_analysis.cpp  video_detection.cpp
test/billiard_physics/: CMakeLists.txt
test/billiard_physics/src/: CMakeLists.txt  billiard_physics_test.cpp  dummy_test.cpp
test/billiard_search/: CMakeLists.txt
test/billiard_search/resources/: 00_test_01.json  configuration.json
test/billiard_search/src/: CMakeLists.txt  billiard_search_test.cpp  billiard_search_visualization.hpp  calculate_minimal_velocity_test.cpp  dummy_test.cpp  simulation_vs_reality.cpp  util.cpp  util.hpp
test/process/: CMakeLists.txt
test/process/src/: CMakeLists.txt  process_test.cpp
(+439 files in other folders)
