
set(CAMERA_SDK_INCLUDE_DIR
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        PARENT_SCOPE)

set(CAMERA_SDK_FOUND TRUE PARENT_SCOPE)

FILE(GLOB_RECURSE CAMERA_SDK_LIBRARY_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.lib")
foreach(lib IN LISTS CAMERA_SDK_LIBRARY_PATHS)
    get_filename_component(CURRENT_LIB ${lib} NAME_WE)
    add_library(${CURRENT_LIB} STATIC IMPORTED GLOBAL)
    set_target_properties(${CURRENT_LIB} PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CURRENT_LIB}.lib)

    list(APPEND CAMERA_SDK_LIBS ${CURRENT_LIB})
    message(STATUS "camera_sdk - ADD: ${CURRENT_LIB}")
endforeach()
set(CAMERA_SDK_LIBS ${CAMERA_SDK_LIBS} PARENT_SCOPE)
